<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgr_premium"
    android:orientation="vertical"
    tools:context=".Fragment.BottomNavigation.FraPremium.PremiumFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/emotion_premium"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_ng_v_nh_vi_n_premium_v_i_gi_99_000"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMuaPremium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:layout_marginTop="20sp"
            android:backgroundTint="@color/white"
            android:padding="5dp"
            android:text="@string/d_ng_g_i_premium"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#1E1E1E"
        android:orientation="vertical"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:text="@string/l_do_n_n_n_ng_c_p_l_n_premium"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#353535" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="20sp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_check_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tittle_nghenhac"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="20sp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_check_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="100dp"
                    android:text="@string/ch_t_l_ng_m_thanh_v_t_tr_i"
                    android:textColor="@color/white" />
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#1E1E1E"
        android:orientation="vertical"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="30dp">

            <TextView
                android:id="@+id/txtEmotion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/emotion_free"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/g_i_hi_n_t_i" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>