<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Fragment.BottomNavigation.FraAdmin.Manage.UpdateAlbumsFragment">

    <LinearLayout
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:background="@color/white"
        android:layout_height="wrap_content">
        <ImageView
            android:background="@color/black"
            android:layout_margin="2dp"
            android:id="@+id/imgAlbums"
            android:layout_width="200dp"
            android:layout_height="200dp"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t_n_album"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/txtNameAlbums"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nghesi"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/txtNameAtists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lo_i"
            android:textSize="20sp"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spnCategory"
            android:textStyle="bold"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Sửa" />

</LinearLayout>