<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bgr_check"
    android:paddingHorizontal="20dp"
    tools:context=".Fragment.BottomNavigation.FraPremium.CheckPremiumFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:backgroundTint="#1E1E1E"
                android:orientation="vertical"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingVertical="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20sp"
                        android:text="@string/vui_l_ng_qu_t_m_qr_thanh_to_n"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="#353535" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20sp"
                        android:layout_marginTop="20sp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/baseline_arrow_right_alt_24" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/sau_khi_qu_t_m_qr_v_thanh_to_n_th_nh_c_ng_h_y_ch_p_l_i_bill_v_th_m_d_i_v_n_x_c_nh_n"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20sp"
                        android:layout_marginTop="20sp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/baseline_arrow_right_alt_24" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="100dp"
                            android:text="@string/th_i_gian_x_c_nh_n_thanh_to_n_l_1_2_ng_y"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20sp"
                        android:layout_marginTop="20sp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/baseline_arrow_right_alt_24" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"

                            android:text="@string/c_b_t_k_th_c_m_c_n_o_vui_l_ng_li_n_h_v_i_ch_ng_t_i_qua_s_t_1900_1234"
                            android:textColor="@color/white" />
                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/maqr" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/h_y_th_m_nh_bill_ch_p_v_o_y"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/imgBill"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_margin="2dp"
                    android:background="@color/black" />
            </LinearLayout>

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/white"
                android:text="Xác nhận"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>